<resources>
    <string name="app_name">Jigsaw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="configuration_title">Configuration</string>
    <string name="difficult_level">Choose the Difficulty Level:</string>
    <string name="choose_image">Play the Game by Tapping an Image:</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="time_remaining">Time Remaining:</string>
    <string name="new_game">NEW GAME</string>
    <string name="change_config">CONFIG</string>
    <string name="settings_title">Settings</string>
    <string name="music_settings">Music On/Off</string>
    <string name="music_on">On</string>
    <string name="music_off">Off</string>
    <string name="font_settings">Font</string>
    <string name="large_font">Large</string>
    <string name="small_font">Small</string>
    <string name="stats_title">Statistics</string>
    <string name="quickest_time">Quickest Time</string>
    <string name="games_played">Games Played</string>
    <string name="games_won">Games Won</string>
    <string name="games_loss">Games Lost</string>
    <string name="reset">Reset</string>
    <string name="none">None</string>
    <string name="zero">0</string>
</resources>