<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_canvas"
    android:hapticFeedbackEnabled="true"
    tools:context=".ui.configuration.ConfigFragment">

    <!-- Image selection section -->

    <TextView
        android:id="@+id/settingsTitle_textView"
        android:layout_width="386dp"
        android:layout_height="63dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/configuration_title"
        android:textAlignment="center"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/musicSelection_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/difficult_level"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/chooseImage_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="424dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/choose_image"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_radioButton" />

    <RadioGroup
        android:id="@+id/music_radioButton"
        android:layout_width="335dp"
        android:layout_height="145dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle_textView"
        app:layout_constraintVertical_bias="0.068">

        <RadioButton
            android:id="@+id/on_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/easy"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="392dp" />

        <RadioButton
            android:id="@+id/off_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="392dp" />

        <RadioButton
            android:id="@+id/hard_radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/hard"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="392dp" />

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="206dp"
        android:layout_height="369dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseImage_textView"
        app:layout_constraintVertical_bias="0.175" />


</androidx.constraintlayout.widget.ConstraintLayout>